NetBSD Problem Report #51002

From www@NetBSD.org  Thu Mar 24 12:17:46 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6FA4E7ABDA
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 24 Mar 2016 12:17:46 +0000 (UTC)
Message-Id: <20160324121745.8F8DF7ACAD@mollari.NetBSD.org>
Date: Thu, 24 Mar 2016 12:17:45 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/lib/libc/gen/getnetgrent.c:169: % specifier mixup ?
X-Send-Pr-Version: www-1.0

>Number:         51002
>Category:       lib
>Synopsis:       src/lib/libc/gen/getnetgrent.c:169: % specifier mixup ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 24 12:20:00 +0000 2016
>Closed-Date:    Tue May 31 03:48:36 +0000 2016
>Last-Modified:  Tue May 31 03:48:36 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160324
>Organization:
>Environment:
>Description:

src/lib/libc/gen/getnetgrent.c:169]: (warning) %s in format string (no. 1) requires 'char *' but the argument type is 'void'.


Source code is

       char buf[1024];
        (void) fprintf(stderr, "netgroup %s\n",
            _ng_print(buf, sizeof(buf), ng));

but

void
_ng_print(char *buf, size_t len, const struct netgroup *ng)

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51002 CVS commit: src/lib/libc/gen
Date: Tue, 31 May 2016 03:43:10 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Tue May 31 03:43:10 UTC 2016

 Modified Files:
 	src/lib/libc/gen: getnetgrent.c

 Log Message:
 PR 51002 David Binderman: fix wrong printing code not enabled by default.


 To generate a diff of this commit:
 cvs rdiff -u -r1.42 -r1.43 src/lib/libc/gen/getnetgrent.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 31 May 2016 03:48:36 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.