PR 51002 David Binderman: fix wrong printing code not enabled by default.